--- a/molecule/cloud-aws-windows-solr-slave/playbook.yml
+++ b/molecule/cloud-aws-windows-solr-slave/playbook.yml
@@ -3,12 +3,13 @@
   hosts: all
   roles:
     - role: lean_delivery.java
+      transport: chocolatey
+      java_major_version: 8
+      java_package: jdk
+      java_tarball_install: False
     - role: lean_delivery.solr_standalone
     - role: ansible-role-solr-cluster
   vars:
-    transport: web
-    transport_web: "{{ lookup('env','STORAGE_AWS') }}/oracle-java/jre-8u211-linux-x64.tar.gz"
-    java_tarball_install: True
     solr_instance_type: slave
     solr_change_default_password: False
     solr_copy_default_configsets: True
