--- a/molecule/docker-solr-master/molecule.yml
+++ b/molecule/docker-solr-master/molecule.yml
@@ -10,12 +10,12 @@ lint:
   options:
     config-file: .yamllint
 platforms:
-  - name: test-docker-centos7-solr-slave
+  - name: test-docker-centos7-solr-master
     image: leandelivery/docker-systemd:centos7
     privileged: True
     groups:
       - rhel_family
-  - name: test-docker-ubuntu1804-solr-slave
+  - name: test-docker-ubuntu1804-solr-master
     image: leandelivery/docker-systemd:ubuntu-18.04
     privileged: True
     security_opts:
@@ -35,7 +35,7 @@ provisioner:
   lint:
     name: ansible-lint
 scenario:
-  name: default-slave
+  name: docker-solr-master
 verifier:
   name: testinfra
   options:
