--- a/molecule/cloud-aws-windows-solr-slave/playbook.yml
+++ b/molecule/cloud-aws-windows-solr-slave/playbook.yml
@@ -3,11 +3,11 @@
   hosts: all
   roles:
     - role: lean_delivery.java
-      transport: chocolatey
+      transport: local
+      transport_local: /tmp/jdk-8u202-windows-x64.exe
       java_major_version: 8
       java_minor_version: 202
       java_package: jdk
-      java_tarball_install: False
     - role: lean_delivery.solr_standalone
     - role: ansible-role-solr-cluster
   vars:
