--- a/molecule/cloud-aws-windows-solr-master/playbook.yml
+++ b/molecule/cloud-aws-windows-solr-master/playbook.yml
@@ -3,11 +3,10 @@
   hosts: all
   roles:
     - role: lean_delivery.java
-      transport: local
-      transport_local: /tmp/jdk-8u202-windows-x64.exe
+      transport: web
+      transport_web: "{{ lookup('env','STORAGE_AWS') }}/oracle-java/jdk-8u45-windows-x64.exe"
       java_major_version: 8
-      java_minor_version: 202
-      java_package: jdk
+      java_minor_version: 45
     - role: lean_delivery.solr_standalone
     - role: ansible-role-solr-cluster
   vars:
