--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ install:
 
 script:
   - ansible-lint . -c .ansible-lint
+  - molecule test -s docker-solr-master
+  - molecule test -s docker-solr-slave
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
