--- a/molecule/cloud-aws-windows-solr-slave/playbook.yml
+++ b/molecule/cloud-aws-windows-solr-slave/playbook.yml
@@ -4,9 +4,10 @@
   roles:
     - role: lean_delivery.java
       transport: web
-      transport_web: "{{ lookup('env','STORAGE_AWS') }}/oracle-java/jdk-8u45-windows-x64.exe"
+      transport_web: "{{ lookup('env','STORAGE_AWS') }}/oracle-java/jdk-8u152-windows-x64.exe"
       java_major_version: 8
-      java_minor_version: 45
+      java_minor_version: 152
+      java_package: jdk
       java_tarball_install: False
     - role: lean_delivery.solr_standalone
     - role: ansible-role-solr-cluster
