--- a/tasks/system/Linux.yml
+++ b/tasks/system/Linux.yml
@@ -21,3 +21,19 @@
   register: true_configset_xml_list
   loop: '{{ configset_list }}'
   become: True
+
+- name: Configure solr node
+  blockinfile:
+    dest: '{{ solr_configset_path }}/{{ item.item | basename }}/conf/solrconfig.xml'
+    insertafter: '.*<requestHandler name="/replication" class="solr.ReplicationHandler".*>'
+    marker: ' <!-- {mark} solr ansible custom block --> '
+    block: '{{ solr_config_lines }}'
+    state: present
+  become: True
+  loop: '{{ true_configset_xml_list.results }}'
+  when: item.matched
+  notify:
+    - restart Solr Linux
+
+- name: Force all notified handlers
+  meta: flush_handlers
