--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,6 +8,8 @@ solr_version: 8.0.0
 ### solr config lines
 solr_config_lines: '{{ default_solr_config_lines }}'
 
+solr_master_generated_url: '{{ default_solr_master_defined_host }}'
+
 solr_service_name: solr
 solr_with_systemd: True
 
