--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,70 +25,36 @@ Ansible lint:
   tags:
     - aws
 
-Docker solr-cluster-master:
+Docker solr-cluster-test:
   stage: deployment test
   script:
-    - molecule test -s docker-solr-master
+    - molecule test -s default
   tags:
     - aws
 
-Docker solr-cluster-slave:
-  stage: deployment test
-  script:
-    - molecule test -s docker-solr-slave
-  tags:
-    - aws
-
-AWS solr-cluster-master:
+AWS solr-cluster-test:
   variables:
     AWS_REGION: us-east-1
   stage: deployment test
   script:
-    - molecule test -s cloud-aws-solr-master
+    - molecule test -s cloud-aws-direct
   tags:
     - aws
 
-AWS solr-cluster-slave:
+AWS Windows solr-cluster-test:
   variables:
     AWS_REGION: us-east-1
   stage: deployment test
   script:
-    - molecule test -s cloud-aws-solr-slave
+    - molecule test -s cloud-aws-windows
   tags:
     - aws
 
-AWS Windows solr-cluster-master:
-  variables:
-    AWS_REGION: us-east-1
-  stage: deployment test
-  script:
-    - molecule test -s cloud-aws-windows-solr-master
-  tags:
-    - aws
-
-AWS Windows solr-cluster-slave:
-  variables:
-    AWS_REGION: us-east-1
-  stage: deployment test
-  script:
-    - molecule test -s cloud-aws-windows-solr-slave
-  tags:
-    - aws
-
-EPC solr-cluster-master:
+EPC solr-cluster-test:
   variables:
     EPC_REGION: EPAM-BY2
   stage: deployment test
   script:
-    - molecule test -s cloud-epc-solr-master
-  tags:
-    - delegated
-
-EPC solr-cluster-slave:
-  variables:
-    EPC_REGION: EPAM-BY2
-  stage: deployment test
-  script:
-    - molecule test -s cloud-epc-solr-slave
+    - molecule test -s cloud-epc-delegated
   tags:
     - delegated
