--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 ---
 galaxy_info:
-  role_name: "solr-cluste"
+  role_name: "solr-cluster"
   author: "Lean Delivery team <team@lean-delivery.com>"
   description: "Lean Delivery Solr configuration as master or slave"
   company: "Epam Systems"
@@ -11,6 +11,7 @@ galaxy_info:
     - name: "Ubuntu"
       versions:
         - "xenial"
+        - "bionic"
     - name: "Debian"
       versions:
         - "stretch"
