--- a/tasks/system/Linux.yml
+++ b/tasks/system/Linux.yml
@@ -35,5 +35,11 @@
   notify:
     - restart Solr Linux
 
-- name: Force all notified handlers
-  meta: flush_handlers
+- name: Start service
+  service:
+    name: '{{ solr_service_name }}'
+    state: started
+    enabled: True
+  become: True
+  when:
+    - solr_service_start
