--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -3,10 +3,14 @@
   service:
     name: '{{ solr_service_name }}'
     state: restarted
-  when: solr_with_systemd
+  when:
+    - solr_with_systemd
+    - solr_service_start
   become: True
 
 - name: restart Solr Windows
   win_service:
     name: '{{ solr_service_name }}'
     state: restarted
+  when:
+    - solr_service_start
