--- a/tasks/system/Windows.yml
+++ b/tasks/system/Windows.yml
@@ -37,5 +37,9 @@
   notify:
     - restart Solr Windows
 
-- name: Force all notified handlers
-  meta: flush_handlers
+- name: start Solr Windows
+  win_service:
+    name: '{{ solr_service_name }}'
+    state: started
+  when:
+    - solr_service_start
