--- a/molecule/cloud-aws-windows/playbook.yml
+++ b/molecule/cloud-aws-windows/playbook.yml
@@ -3,14 +3,9 @@
   hosts: all
   roles:
     - role: lean_delivery.java
-      transport: web
-      transport_web: "{{ lookup('env','STORAGE_AWS') }}/oracle-java/jdk-8u152-windows-x64.exe"
-      java_major_version: 8
-      java_minor_version: 152
-      java_package: jdk
-      java_tarball_install: False
     - role: lean_delivery.solr_standalone
     - role: ansible-role-solr-cluster
   vars:
     solr_change_default_password: False
     solr_copy_default_configsets: True
+    solr_use_java_version_8: False
