--- a/molecule/cloud-aws-windows/molecule.yml
+++ b/molecule/cloud-aws-windows/molecule.yml
@@ -48,6 +48,12 @@ provisioner:
     group_vars:
       solr7:
         solr_version: 7.7.1
+        transport: web
+        transport_web: "{{ lookup('env','STORAGE_AWS') }}/oracle-java/jdk-8u152-windows-x64.exe"
+        java_major_version: 8
+        java_minor_version: 152
+        java_package: jdk
+        java_tarball_install: False
       solr8:
         solr_version: 8.0.0
       slave:
