--- a/molecule/cloud-aws-windows/molecule.yml
+++ b/molecule/cloud-aws-windows/molecule.yml
@@ -15,7 +15,7 @@ platforms:
     aws_region: us-east-1
     instance_type: m5.large
     vpc_subnet_id: subnet-05a2ef2b767afec50
-    assign_public_ip: False
+    assign_public_ip: True
     spot_price: 0.14
     aws_sec_group:
       - default
@@ -30,7 +30,7 @@ platforms:
     aws_region: us-east-1
     instance_type: m5.large
     vpc_subnet_id: subnet-05a2ef2b767afec50
-    assign_public_ip: False
+    assign_public_ip: True
     spot_price: 0.14
     aws_sec_group:
       - default
@@ -48,12 +48,6 @@ provisioner:
     group_vars:
       solr7:
         solr_version: 7.7.1
-        transport: web
-        transport_web: "{{ lookup('env','STORAGE_AWS') }}/oracle-java/jdk-8u152-windows-x64.exe"
-        java_major_version: 8
-        java_minor_version: 152
-        java_package: jdk
-        java_tarball_install: False
       solr8:
         solr_version: 8.0.0
       slave:
