--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,14 +25,14 @@ Ansible lint:
   tags:
     - aws
 
-Docker solr-cluster-test:
+.Docker solr-cluster-test:
   stage: deployment test
   script:
     - molecule test -s default
   tags:
     - aws
 
-AWS solr-cluster-test:
+.AWS solr-cluster-test:
   variables:
     AWS_REGION: us-east-1
   stage: deployment test
@@ -50,7 +50,7 @@ AWS Windows solr-cluster-test:
   tags:
     - aws
 
-EPC solr-cluster-test:
+.EPC solr-cluster-test:
   variables:
     EPC_REGION: EPAM-BY2
   stage: deployment test
