Test private ip
Signed-off-by: Timur Gadiev <Timur_Gadiev@epam.com>

--- a/molecule/cloud-aws-windows/playbook.yml
+++ b/molecule/cloud-aws-windows/playbook.yml
@@ -10,7 +10,7 @@
 
     - name: Out public ip
       debug:
-        var: http_output
+        var: http_output.json.ip
 
   # roles:
   #   - role: lean_delivery.java
