--- a/molecule/cloud-aws-windows/molecule.yml
+++ b/molecule/cloud-aws-windows/molecule.yml
@@ -15,7 +15,7 @@ platforms:
     aws_region: us-east-1
     instance_type: m5.large
     vpc_subnet_id: subnet-05a2ef2b767afec50
-    assign_public_ip: False
+    assign_public_ip: True
     spot_price: 0.14
     aws_sec_group:
       - default
@@ -32,7 +32,7 @@ platforms:
     aws_region: us-east-1
     instance_type: m5.large
     vpc_subnet_id: subnet-05a2ef2b767afec50
-    assign_public_ip: False
+    assign_public_ip: True
     spot_price: 0.14
     aws_sec_group:
       - default
@@ -62,8 +62,8 @@ provisioner:
         ansible_winrm_transport: credssp
         ansible_winrm_server_cert_validation: ignore
   playbooks:
-    # create: create.yml
-    create: ../resources/provisioning/WINRM/create.yml
+    create: create.yml
+    # create: ../resources/provisioning/WINRM/create.yml
     destroy: ../resources/provisioning/WINRM/destroy.yml
   lint:
     name: ansible-lint
