--- a/molecule/cloud-aws-windows/molecule.yml
+++ b/molecule/cloud-aws-windows/molecule.yml
@@ -14,7 +14,7 @@ platforms:
     aws_image_id: ami-00a20f508263efd30
     aws_region: us-east-1
     instance_type: m5.large
-    vpc_subnet_id: subnet-05a2ef2b767afec50
+    vpc_subnet_id: subnet-01be2149
     assign_public_ip: True
     spot_price: 0.14
     aws_sec_group:
@@ -31,7 +31,7 @@ platforms:
     aws_image_id: ami-00a20f508263efd30
     aws_region: us-east-1
     instance_type: m5.large
-    vpc_subnet_id: subnet-05a2ef2b767afec50
+    vpc_subnet_id: subnet-01be2149
     assign_public_ip: True
     spot_price: 0.14
     aws_sec_group:
