--- a/molecule/cloud-aws-windows/molecule.yml
+++ b/molecule/cloud-aws-windows/molecule.yml
@@ -19,8 +19,8 @@ platforms:
     spot_price: 0.14
     aws_sec_group:
       - default
-      - molecule
-      - epam-by-ru
+      # - molecule
+      # - epam-by-ru
     wait_timeout: 1800
     groups:
       - windows
@@ -36,8 +36,8 @@ platforms:
     spot_price: 0.14
     aws_sec_group:
       - default
-      - molecule
-      - epam-by-ru
+      # - molecule
+      # - epam-by-ru
     wait_timeout: 1800
     groups:
       - windows
