--- a/molecule/cloud-aws-windows/playbook.yml
+++ b/molecule/cloud-aws-windows/playbook.yml
@@ -1,21 +1,8 @@
 ---
 - name: Converge
   hosts: all
-  tasks:
-    - name: Perform a GET and Store Output
-      win_uri:
-        url: https://api.ipify.org?format=json
-        return_content: True
-      register: http_output
-
-    - name: Out public ip
-      debug:
-        var: http_output.json.ip
-
-  # roles:
-  #   - role: lean_delivery.java
-  #   - role: lean_delivery.solr_standalone
-  #   - role: ansible-role-solr-cluster
+  roles:
+    - role: ansible-role-solr-cluster
   vars:
     solr_change_default_password: False
     solr_copy_default_configsets: True
