--- a/molecule/cloud-epc-delegated/molecule.yml
+++ b/molecule/cloud-epc-delegated/molecule.yml
@@ -32,12 +32,14 @@ provisioner:
   log: True
   inventory:
     group_vars:
+      all:
+        solr_patch_transport_web: '{{ lookup("env","STORAGE_EPC") }}/hybris-solr'
       slave:
         solr_instance_type: slave
         solr_master_defined_host: solr-master.example.com
   playbooks:
     create: ../resources/provisioning/EPC/create.yml
-    prepare: ../resources/provisioning/EPC/prepare.yml
+    prepare: ../resources/prepare.yml
     destroy: ../resources/provisioning/EPC/destroy.yml
   config_options:
     ssh_connection:
