--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -38,9 +38,13 @@ provisioner:
   log: True
   inventory:
     group_vars:
+      all:
+        solr_patch_transport_web: '{{ lookup("env","STORAGE_AWS") }}/hybris-solr'
       slave:
         solr_instance_type: slave
         solr_master_defined_host: solr-master.example.com
+  playbooks:
+    prepare: ../resources/prepare.yml
   lint:
     name: ansible-lint
 scenario:
