--- a/molecule/cloud-epc-delegated/molecule.yml
+++ b/molecule/cloud-epc-delegated/molecule.yml
@@ -34,6 +34,7 @@ provisioner:
     group_vars:
       all:
         solr_patch_transport_web: '{{ lookup("env","STORAGE_EPC") }}/hybris-solr'
+        solr_version: 8.0.0
       slave:
         solr_instance_type: slave
         solr_master_defined_host: solr-master.example.com
