--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -16,6 +16,7 @@ platforms:
     groups:
       - rhel_family
       - slave
+      - solr8
 
   - name: test-docker-ubuntu1804-solr-slave
     image: leandelivery/docker-systemd:ubuntu-18.04
@@ -32,6 +33,7 @@ platforms:
     groups:
       - debian_family
       - slave
+      - solr8
 
 provisioner:
   name: ansible
@@ -40,6 +42,7 @@ provisioner:
     group_vars:
       all:
         solr_patch_transport_web: '{{ lookup("env","STORAGE_AWS") }}/hybris-solr'
+        solr_version: 8.0.0
       slave:
         solr_instance_type: slave
         solr_master_defined_host: solr-master.example.com
