--- a/molecule/cloud-epc-delegated/molecule.yml
+++ b/molecule/cloud-epc-delegated/molecule.yml
@@ -19,14 +19,14 @@ platforms:
       - rhel_family
       - slave
 
-  - name: test-epc-ubuntu1804-solr-master
+  - name: test-epc-ubuntu1804-solr_master
     image: Ubuntu18.04_64-bit
     shape: small
     region: EPAM-BY2
     wait_timeout: 3600
     groups:
       - debian_family
-      - solr-master
+      - solr_master
 
 provisioner:
   name: ansible
@@ -38,7 +38,7 @@ provisioner:
         solr_version: 8.0.0
       slave:
         solr_instance_type: slave
-        solr_master_defined_host: solr-master.example.com
+        solr_master_defined_host: solr_master.example.com
   playbooks:
     create: ../resources/provisioning/EPC/create.yml
     prepare: ../resources/prepare.yml
