--- a/molecule/resources/prepare.yml
+++ b/molecule/resources/prepare.yml
@@ -1,13 +1,13 @@
 ---
 - name: Prepare Ubuntu / Debian
   hosts: debian_family
-  gather_facts: False
+  gather_facts: false
   tasks:
 
     - name: Install python for Ansible
       raw: test -e /usr/bin/python || (apt install -y python-minimal)
-      become: True
-      changed_when: False
+      become: true
+      changed_when: false
       register: update_result
       retries: 10
       delay: 5
@@ -15,12 +15,12 @@
 
 - name: Prepare RHEL
   hosts: rhel_family
-  gather_facts: False
+  gather_facts: false
   tasks:
     - name: Install python for Ansible
       raw: test -e /usr/bin/python || (yum install -y python2 python-simplejson)
-      become: True
-      changed_when: False
+      become: true
+      changed_when: false
 
     - name: gather facts
       setup:
@@ -32,7 +32,7 @@
         state: 'present'
       register: status
       until: status is succeeded
-      become: True
+      become: true
 
 - name: Prepare java and solr
   hosts: all
@@ -41,7 +41,7 @@
     - role: lean_delivery.solr_standalone
     - role: lean_delivery.solr_hybris_config
   vars:
-    solr_change_default_password: False
-    solr_auth_configure: False
-    solr_use_java_version_8: False
+    solr_change_default_password: false
+    solr_auth_configure: false
+    solr_use_java_version_8: false
     solr_patch_transport: web
