--- a/molecule/cloud-epc-delegated/molecule.yml
+++ b/molecule/cloud-epc-delegated/molecule.yml
@@ -26,11 +26,11 @@ platforms:
     wait_timeout: 3600
     groups:
       - debian_family
-      - solr-master
+      - solr_master
 
 provisioner:
   name: ansible
-  log: True
+  log: true
   inventory:
     group_vars:
       all:
@@ -38,7 +38,7 @@ provisioner:
         solr_version: 8.0.0
       slave:
         solr_instance_type: slave
-        solr_master_defined_host: solr-master.example.com
+        solr_master_defined_host: solr_master.example.com
   playbooks:
     create: ../resources/provisioning/EPC/create.yml
     prepare: ../resources/prepare.yml
