--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -12,14 +12,14 @@ lint:
 platforms:
   - name: test-docker-centos7-solr-master
     image: leandelivery/docker-systemd:centos7
-    privileged: True
+    privileged: true
     groups:
       - rhel_family
-      - solr-master
+      - solr_master
 
   - name: test-docker-ubuntu1804-solr-slave
     image: leandelivery/docker-systemd:ubuntu-18.04
-    privileged: True
+    privileged: true
     security_opts:
       - seccomp=unconfined
     volumes:
@@ -35,7 +35,7 @@ platforms:
 
 provisioner:
   name: ansible
-  log: True
+  log: true
   inventory:
     group_vars:
       all:
@@ -43,7 +43,7 @@ provisioner:
         solr_version: 8.0.0
       slave:
         solr_instance_type: slave
-        solr_master_defined_host: solr-master.example.com
+        solr_master_defined_host: solr_master.example.com
   playbooks:
     prepare: ../resources/prepare.yml
   lint:
