--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ sudo: required
 
 language: python
 python:
-  - "2.7"
+  - "3.6"
 
 services:
   - docker
@@ -13,14 +13,15 @@ before_install:
   - git clone https://github.com/lean-delivery/ansible-lint-rules.git ~/ansible-lint-rules
 
 install:
-  - pip install --upgrade ansible==2.7.* docker-py molecule==2.20 pyOpenSSL PyYAML pytest
+  - pip install --upgrade ansible==2.8.* docker molecule==2.22
   - pip install git+https://github.com/ansible/ansible-lint.git
+  - git clone https://github.com/lean-delivery/ansible-molecule-drivers.git molecule/resources/provisioning
   - ansible --version
   - ansible-lint --version
 
 script:
   - ansible-lint . -c .ansible-lint
-  # - molecule test -s default
+  - molecule test -s default
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
