--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -46,14 +46,12 @@ provisioner:
         solr_master_defined_host: solr_master.example.com
   playbooks:
     prepare: ../resources/prepare.yml
+    verify: ../resources/tests/verify.yml
   lint:
     name: ansible-lint
 scenario:
   name: default
 verifier:
-  name: testinfra
-  options:
-    verbose: true
-  directory: ../resources/tests/
+  name: ansible
   lint:
-    name: flake8
+    name: ansible-lint
