--- a/molecule/cloud-aws-windows/molecule.yml
+++ b/molecule/cloud-aws-windows/molecule.yml
@@ -46,7 +46,7 @@ platforms:
     platform: windows2019core
     region: us-east-1
     instance_type: m5.large
-    vpc_subnet_id: subnet-0f2b9cd66faea38af
+    vpc_subnet_id: subnet-314c223d
     assign_public_ip: True
     spot_price: 0.14
     security_group_name:
@@ -62,7 +62,7 @@ platforms:
     platform: windows2019core
     region: us-east-1
     instance_type: m5.large
-    vpc_subnet_id: subnet-0f2b9cd66faea38af
+    vpc_subnet_id: subnet-314c223d
     assign_public_ip: True
     spot_price: 0.14
     security_group_name:
