--- a/molecule/cloud-aws-direct/molecule.yml
+++ b/molecule/cloud-aws-direct/molecule.yml
@@ -29,6 +29,7 @@ platforms:
 
   - name: test-aws-centos7-solr-slave-solr8
     image: ami-9887c6e7
+    platform: centos7
     instance_type: m5.large
     region: us-east-1
     vpc_subnet_id: subnet-0f2b9cd66faea38af
@@ -45,6 +46,7 @@ platforms:
 
   - name: test-aws-ubuntu16-solr_master
     image: ami-09677e0a6b14905b0
+    platform: ubuntu16
     instance_type: m5.large
     region: us-east-1
     vpc_subnet_id: subnet-0f2b9cd66faea38af
@@ -60,6 +62,7 @@ platforms:
 
   - name: test-aws-ubuntu18-solr-slave-solr7
     image: ami-012fd5eb46f56731f
+    platform: ubuntu18
     instance_type: m5.large
     region: us-east-1
     vpc_subnet_id: subnet-0f2b9cd66faea38af
@@ -76,6 +79,7 @@ platforms:
 
   - name: test-aws-ubuntu18-solr_master-solr8
     image: ami-012fd5eb46f56731f
+    platform: ubuntu18
     instance_type: m5.large
     region: us-east-1
     vpc_subnet_id: subnet-0f2b9cd66faea38af
@@ -91,6 +95,7 @@ platforms:
 
   - name: test-aws-Debian9-solr-slave
     image: ami-003f19e0e687de1cd
+    platform: debian9
     instance_type: m5.large
     region: us-east-1
     vpc_subnet_id: subnet-0f2b9cd66faea38af
