--- a/molecule/cloud-aws-windows/molecule.yml
+++ b/molecule/cloud-aws-windows/molecule.yml
@@ -100,6 +100,7 @@ provisioner:
     create: ../resources/provisioning/AWS/create.yml
     prepare: ../resources/prepare.yml
     destroy: ../resources/provisioning/AWS/destroy.yml
+    verify: ../resources/tests/verify_win.yml
   lint:
     name: ansible-lint
 scenario:
